// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 71,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.815,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 147,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 59,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 294,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.555,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.0975000000000001,
  "hp": 190,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 19,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.535,
  "critResistPct": 4.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14.5,
  "healMult": 1.1725,
  "hp": 640,
  "intStat": 148,
  "magicAtk": 39,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 29,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 34,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 21.25,
  "critMult": 2.3749999999999996,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59.5,
  "healMult": 1.0975000000000001,
  "hp": 640,
  "intStat": 15,
  "magicAtk": 29,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 119,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.595,
  "critResistPct": 1.5,
  "def": 28,
  "evasionPct": 3.7,
  "extraAttackChancePct": 15,
  "healMult": 1.7175000000000002,
  "hp": 795,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 795,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 51,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.801,
  "critResistPct": 1.5,
  "def": 16,
  "evasionPct": 3.7,
  "extraAttackChancePct": 13.5,
  "healMult": 1.2575,
  "hp": 680,
  "intStat": 15,
  "magicAtk": 31,
  "magicDef": 7,
  "maxHp": 680,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 27,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "0a132e401c863bcc1054756d1ad9e5d2ea961d33",
    "outcome": "win",
    "playerHp": 680,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "89ae5cc44251f9a14065fa96792eac812205f478",
    "outcome": "win",
    "playerHp": 676,
    "playerMp": 227,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "94f3307b3780072f5864429e46afcacc9623efa1",
    "outcome": "win",
    "playerHp": 576,
    "playerMp": 227,
    "turns": 24,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "6b38147222bbb9c558895ffdb372ef06749d503b",
    "outcome": "win",
    "playerHp": 633,
    "playerMp": 227,
    "turns": 11,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "3225d5c163ffb8b78ad497093227305dd1904b8c",
    "outcome": "win",
    "playerHp": 409,
    "playerMp": 501,
    "turns": 51,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "1d4608b129bd45def9cbd98a7dc0570275822619",
    "outcome": "win",
    "playerHp": 285,
    "playerMp": 227,
    "turns": 526,
  },
  {
    "enemyHp": 215,
    "label": "heal_vs_들소_boss",
    "logSha": "140df4aa5fb049eaeda5121b66775b8a964a3b46",
    "outcome": "lose",
    "playerHp": 795,
    "playerMp": 227,
    "turns": 257,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "1acf09c6fb60a7917271a136482b53bd113a3900",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 387,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "b6cac6e1f9f83776407d1c644b89067ed3dd53cb",
    "outcome": "win",
    "playerHp": 185,
    "playerMp": 92,
    "turns": 26,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "a51639da9f3a5031cf1199e6930ef41d2a2fb037",
    "outcome": "p1_win",
    "turns": 65,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "67195ce3b9b93b7018ddbc5c7e135b3c0b753528",
    "outcome": "p1_win",
    "turns": 35,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "dc415007bdc41f989655df307f52dcfb05670ca4",
    "outcome": "p2_win",
    "turns": 167,
  },
]
`;
